reports/tm_overnight_20260514_014054.log
  File "/home/sinanjam/Downloads/balkes-skor/scripts/tm_overnight_enrich.py", line 31
    print(f"[{datetime.now().strftime(\"%H:%M:%S\")}] {msg}", flush=True)
                                       ^
SyntaxError: unexpected character after line continuation character
